--- a/Staj/Areas/Admin/Views/Product/Index.cshtml
+++ b/Staj/Areas/Admin/Views/Product/Index.cshtml
@@ -19,7 +19,7 @@
             </div>
         </div>
 
-        <table class="table table-bordered table-striped" style="width:100%">
+        <table id="tblData" class="table table-bordered table-striped" style="width:100%">
             <thead>
                 <tr>
                     <th>Title</th>
@@ -30,7 +30,7 @@
                     <th></th>
                 </tr>
             </thead>
-            <tbody>
+            @* <tbody>
                 @foreach (var obj in Model)
                 {
                     <tr>
@@ -51,7 +51,7 @@
                         </td>
                     </tr>
                 }
-            </tbody>
+            </tbody> *@
         </table>
 
     </div>
