--- a/Staj/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/Staj/Areas/Admin/Views/Product/Upsert.cshtml
@@ -11,8 +11,8 @@
     <div class="card-body p-4">
         <form method="post" class="row" enctype="multipart/form-data">
             <div class="border p-3">
-                <input asp_for="Product.Id" hidden />
-                <input asp_for="Product.ImgUrl" hidden />
+                <input asp-for="Product.Id" hidden />
+                <input asp-for="Product.ImgUrl" hidden />
                 <div class="row">
                     <div class="col-10">
                         @*<div asp-validation-summary="ModelOnly"></div>*@
