Login and Register Pages Added

--- a/Staj/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Staj/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Staj.Areas.Identity
+@using StajWeb.Models
+@using StajWeb.Utility;
+@using StajWeb.Models.ViewModels
 @using Staj.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
