--- a/Staj/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Staj/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using Staj
 @using StajWeb.Models
+@using StajWeb.Utility;
 @using StajWeb.Models.ViewModels
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
