--- a/Staj/Views/_ViewImports.cshtml
+++ b/Staj/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using Staj
 @using StajWeb.Models
 @using StajWeb.Models.ViewModels
+@using StajWeb.Utility;
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
