--- a/Staj/Areas/Customer/Views/Home/Index.cshtml
+++ b/Staj/Areas/Customer/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Product>
+﻿@model List<Staj.Model.ProductViewModel>
 
 <div class="row pb-3">
     @foreach (var product in Model)
