--- a/Staj/Areas/Admin/Views/Product/Index.cshtml
+++ b/Staj/Areas/Admin/Views/Product/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Product>
+﻿@model List<Staj.Model.ProductViewModel>
 
 <div class="card shadow border-0 my-4">
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
